# docs

./: Cargo.toml  README.md
.github/workflows/: docs-guardrails.yml
docs/: Tokenomics.md  Workdrop.md  index.md  pipe-firestarter-storage.md  tokenomics-operations-spec.md  tokenomics-params.json
docs/appendix/: old-guardian-node.md  solana-snapshots.md
docs/cdn-api/: api-documentation.md
docs/getting-started/: architecture.md  introduction.md  key-features.md  opportunities-and-use-cases.md  performance-and-fraud-detection.md  quickstart.md  scalability-and-network-growth.md  tokenomics.md
docs/internal/: tokenomics-internal-ops.md
docs/nodes/: devnet-2.md  mainnet-operations.md  mainnet-quality-standards.md  mainnet.md  quality-multiplier.md  testnet.md  wallet-setup.md
docs/nodes/devnet-2/: troubleshooting.md
docs/nodes/install/: mainnet.sh  setup.md
docs/scripts/: check_markdown_links.py  check_tokenomics_params_sync.py  run_tokenomics_test_vectors.py
docs/test-vectors/: 01-nominal-settlement.json  02-gate-failure.json  03-oracle-halt.json  04-empty-storage-demand.json  05-cluster-cap-binding.json
install/: Setup.md  auto.sh
src/: main.rs
tests/: integration_tests.rs
