[package]
name = "pipe-docs-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pulldown-cmark = "0.11"
serde = { version = "1.0", features = ["derive"] }
moka = { version = "0.12", features = ["future"] }
once_cell = "1.21"

[dev-dependencies]
axum-test = "15"
tempfile = "3.14"
